--- a/package.json
+++ b/package.json
@@ -1,14 +1,300 @@
 {
+  "name": "javascript30",
+  "version": "1.0.0",
+  "description": "![](https://javascript30.com/images/JS3-social-share.png)",
+  "main": "index.js",
+  "dependencies": {
+    "acorn": "^8.8.2",
+    "acorn-jsx": "^5.3.2",
+    "ajv": "^6.12.6",
+    "ansi-escapes": "^4.3.2",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^3.2.1",
+    "anymatch": "^3.1.3",
+    "argparse": "^1.0.10",
+    "aria-query": "^5.1.3",
+    "array-buffer-byte-length": "^1.0.0",
+    "available-typed-arrays": "^1.0.5",
+    "babel-jest": "^29.5.0",
+    "babel-plugin-istanbul": "^6.1.1",
+    "babel-plugin-jest-hoist": "^29.5.0",
+    "babel-preset-current-node-syntax": "^1.0.1",
+    "babel-preset-jest": "^29.5.0",
+    "balanced-match": "^1.0.2",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "browserslist": "^4.21.5",
+    "bser": "^2.1.1",
+    "buffer-from": "^1.1.2",
+    "call-bind": "^1.0.2",
+    "callsites": "^3.1.0",
+    "camelcase": "^5.3.1",
+    "caniuse-lite": "^1.0.30001488",
+    "chalk": "^2.4.2",
+    "char-regex": "^1.0.2",
+    "ci-info": "^3.8.0",
+    "cjs-module-lexer": "^1.2.2",
+    "cliui": "^8.0.1",
+    "co": "^4.6.0",
+    "collect-v8-coverage": "^1.0.1",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "concat-map": "^0.0.1",
+    "convert-source-map": "^1.9.0",
+    "cross-spawn": "^7.0.3",
+    "css.escape": "^1.5.1",
+    "debug": "^4.3.4",
+    "dedent": "^0.7.0",
+    "deep-equal": "^2.2.1",
+    "deep-is": "^0.1.4",
+    "deepmerge": "^4.3.1",
+    "define-properties": "^1.2.0",
+    "detect-newline": "^3.1.0",
+    "diff-sequences": "^29.4.3",
+    "doctrine": "^3.0.0",
+    "dom-accessibility-api": "^0.5.16",
+    "electron-to-chromium": "^1.4.402",
+    "emittery": "^0.13.1",
+    "emoji-regex": "^8.0.0",
+    "error-ex": "^1.3.2",
+    "es-get-iterator": "^1.1.3",
+    "escalade": "^3.1.1",
+    "escape-string-regexp": "^1.0.5",
+    "eslint": "^8.41.0",
+    "eslint-plugin-jest-dom": "^4.0.3",
+    "eslint-scope": "^7.2.0",
+    "eslint-visitor-keys": "^3.4.1",
+    "espree": "^9.5.2",
+    "esprima": "^4.0.1",
+    "esquery": "^1.5.0",
+    "esrecurse": "^4.3.0",
+    "estraverse": "^5.3.0",
+    "esutils": "^2.0.3",
+    "execa": "^5.1.1",
+    "exit": "^0.1.2",
+    "expect": "^29.5.0",
+    "fast-deep-equal": "^3.1.3",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "fastq": "^1.15.0",
+    "fb-watchman": "^2.0.2",
+    "file-entry-cache": "^6.0.1",
+    "fill-range": "^7.0.1",
+    "find-up": "^4.1.0",
+    "flat-cache": "^3.0.4",
+    "flatted": "^3.2.7",
+    "for-each": "^0.3.3",
+    "fs.realpath": "^1.0.0",
+    "fsevents": "^2.3.2",
+    "function-bind": "^1.1.1",
+    "functions-have-names": "^1.2.3",
+    "gensync": "^1.0.0-beta.2",
+    "get-caller-file": "^2.0.5",
+    "get-intrinsic": "^1.2.1",
+    "get-package-type": "^0.1.0",
+    "get-stream": "^6.0.1",
+    "glob": "^7.2.3",
+    "glob-parent": "^6.0.2",
+    "globals": "^11.12.0",
+    "gopd": "^1.0.1",
+    "graceful-fs": "^4.2.11",
+    "graphemer": "^1.4.0",
+    "has": "^1.0.3",
+    "has-bigints": "^1.0.2",
+    "has-flag": "^3.0.0",
+    "has-property-descriptors": "^1.0.0",
+    "has-proto": "^1.0.1",
+    "has-symbols": "^1.0.3",
+    "has-tostringtag": "^1.0.0",
+    "html-escaper": "^2.0.2",
+    "human-signals": "^2.1.0",
+    "ignore": "^5.2.4",
+    "import-fresh": "^3.3.0",
+    "import-local": "^3.1.0",
+    "imurmurhash": "^0.1.4",
+    "indent-string": "^4.0.0",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "internal-slot": "^1.0.5",
+    "is-arguments": "^1.1.1",
+    "is-array-buffer": "^3.0.2",
+    "is-arrayish": "^0.2.1",
+    "is-bigint": "^1.0.4",
+    "is-boolean-object": "^1.1.2",
+    "is-callable": "^1.2.7",
+    "is-core-module": "^2.12.1",
+    "is-date-object": "^1.0.5",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-generator-fn": "^2.1.0",
+    "is-glob": "^4.0.3",
+    "is-map": "^2.0.2",
+    "is-number": "^7.0.0",
+    "is-number-object": "^1.0.7",
+    "is-path-inside": "^3.0.3",
+    "is-regex": "^1.1.4",
+    "is-set": "^2.0.2",
+    "is-shared-array-buffer": "^1.0.2",
+    "is-stream": "^2.0.1",
+    "is-string": "^1.0.7",
+    "is-symbol": "^1.0.4",
+    "is-typed-array": "^1.1.10",
+    "is-weakmap": "^2.0.1",
+    "is-weakset": "^2.0.2",
+    "isarray": "^2.0.5",
+    "isexe": "^2.0.0",
+    "istanbul-lib-coverage": "^3.2.0",
+    "istanbul-lib-instrument": "^5.2.1",
+    "istanbul-lib-report": "^3.0.0",
+    "istanbul-lib-source-maps": "^4.0.1",
+    "istanbul-reports": "^3.1.5",
+    "jest-changed-files": "^29.5.0",
+    "jest-circus": "^29.5.0",
+    "jest-cli": "^29.5.0",
+    "jest-config": "^29.5.0",
+    "jest-diff": "^29.5.0",
+    "jest-docblock": "^29.4.3",
+    "jest-each": "^29.5.0",
+    "jest-environment-node": "^29.5.0",
+    "jest-get-type": "^29.4.3",
+    "jest-haste-map": "^29.5.0",
+    "jest-leak-detector": "^29.5.0",
+    "jest-matcher-utils": "^29.5.0",
+    "jest-message-util": "^29.5.0",
+    "jest-mock": "^29.5.0",
+    "jest-pnp-resolver": "^1.2.3",
+    "jest-regex-util": "^29.4.3",
+    "jest-resolve": "^29.5.0",
+    "jest-resolve-dependencies": "^29.5.0",
+    "jest-runner": "^29.5.0",
+    "jest-runtime": "^29.5.0",
+    "jest-snapshot": "^29.5.0",
+    "jest-util": "^29.5.0",
+    "jest-validate": "^29.5.0",
+    "jest-watcher": "^29.5.0",
+    "jest-worker": "^29.5.0",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^3.14.1",
+    "jsesc": "^2.5.2",
+    "json-parse-even-better-errors": "^2.3.1",
+    "json-schema-traverse": "^0.4.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "json5": "^2.2.3",
+    "kleur": "^3.0.3",
+    "leven": "^3.1.0",
+    "levn": "^0.4.1",
+    "lines-and-columns": "^1.2.4",
+    "locate-path": "^5.0.0",
+    "lodash": "^4.17.21",
+    "lodash.merge": "^4.6.2",
+    "lru-cache": "^5.1.1",
+    "lz-string": "^1.5.0",
+    "make-dir": "^3.1.0",
+    "makeerror": "^1.0.12",
+    "merge-stream": "^2.0.0",
+    "micromatch": "^4.0.5",
+    "mimic-fn": "^2.1.0",
+    "min-indent": "^1.0.1",
+    "minimatch": "^3.1.2",
+    "ms": "^2.1.2",
+    "natural-compare": "^1.4.0",
+    "node-int64": "^0.4.0",
+    "node-releases": "^2.0.11",
+    "normalize-path": "^3.0.0",
+    "npm-run-path": "^4.0.1",
+    "object-inspect": "^1.12.3",
+    "object-is": "^1.1.5",
+    "object-keys": "^1.1.1",
+    "object.assign": "^4.1.4",
+    "once": "^1.4.0",
+    "onetime": "^5.1.2",
+    "optionator": "^0.9.1",
+    "p-limit": "^3.1.0",
+    "p-locate": "^4.1.0",
+    "p-try": "^2.2.0",
+    "parent-module": "^1.0.1",
+    "parse-json": "^5.2.0",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "picocolors": "^1.0.0",
+    "picomatch": "^2.3.1",
+    "pirates": "^4.0.5",
+    "pkg-dir": "^4.2.0",
+    "prelude-ls": "^1.2.1",
+    "pretty-format": "^29.5.0",
+    "prompts": "^2.4.2",
+    "punycode": "^2.3.0",
+    "pure-rand": "^6.0.2",
+    "queue-microtask": "^1.2.3",
+    "react-is": "^18.2.0",
+    "redent": "^3.0.0",
+    "regenerator-runtime": "^0.13.11",
+    "regexp.prototype.flags": "^1.5.0",
+    "require-directory": "^2.1.1",
+    "requireindex": "^1.2.0",
+    "resolve": "^1.22.2",
+    "resolve-cwd": "^3.0.0",
+    "resolve-from": "^5.0.0",
+    "resolve.exports": "^2.0.2",
+    "reusify": "^1.0.4",
+    "rimraf": "^3.0.2",
+    "run-parallel": "^1.2.0",
+    "semver": "^6.3.0",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "side-channel": "^1.0.4",
+    "signal-exit": "^3.0.7",
+    "sisteransi": "^1.0.5",
+    "slash": "^3.0.0",
+    "source-map": "^0.6.1",
+    "source-map-support": "^0.5.13",
+    "sprintf-js": "^1.0.3",
+    "stack-utils": "^2.0.6",
+    "stop-iteration-iterator": "^1.0.0",
+    "string-length": "^4.0.2",
+    "string-width": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "strip-bom": "^4.0.0",
+    "strip-final-newline": "^2.0.0",
+    "strip-indent": "^3.0.0",
+    "strip-json-comments": "^3.1.1",
+    "supports-color": "^5.5.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "test-exclude": "^6.0.0",
+    "text-table": "^0.2.0",
+    "tmpl": "^1.0.5",
+    "to-fast-properties": "^2.0.0",
+    "to-regex-range": "^5.0.1",
+    "type-check": "^0.4.0",
+    "type-detect": "^4.0.8",
+    "type-fest": "^0.21.3",
+    "update-browserslist-db": "^1.0.11",
+    "uri-js": "^4.4.1",
+    "v8-to-istanbul": "^9.1.0",
+    "walker": "^1.0.8",
+    "which": "^2.0.2",
+    "which-boxed-primitive": "^1.0.2",
+    "which-collection": "^1.0.1",
+    "which-typed-array": "^1.1.9",
+    "word-wrap": "^1.2.3",
+    "wrap-ansi": "^7.0.0",
+    "wrappy": "^1.0.2",
+    "write-file-atomic": "^4.0.2",
+    "y18n": "^5.0.8",
+    "yallist": "^3.1.1",
+    "yargs": "^17.7.2",
+    "yargs-parser": "^21.1.1",
+    "yocto-queue": "^0.1.0"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
+  },
   "scripts": {
     "test": "jest"
   },
-  
-  "devDependencies": {
-    "babel-jest": "^29.5.0",
-    "jest": "^29.5.0"
-  },
-  "dependencies": {
-    "lodash": "^4.17.21"
-  }
- 
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
